--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ a {
     height: 400px;
     background-color : rgb(240,240,220);
     margin-right: 2%;
+    border-radius: 25px;
 }
 
 .right {
@@ -60,6 +61,7 @@ a {
     height: 400px;
     /* height: 100%; */
     background-color : rgb(240,240,220);
+    border-radius: 25px;
 }
 
 .clearfix {
@@ -75,6 +77,7 @@ article {
     background-color: rgb(230,230,230);
     margin: 20px 10px;
     padding: 6px;
+    border-radius: 15px;
 }
 
 aside {
